--- a/tester-women .ipynb
+++ b/tester-women .ipynb
@@ -2,20 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "## Women sports topics (Most played sports, maybe add age??):\n",
     "#Athletics, Gymnastics, Swimming\n",
     "\n",
-    "\n",
-    "import pandas as pd"
+    "import matplotlib.pyplot as plt\n",
+    "import scipy.stats as st\n",
+    "import numpy as np \n",
+    "import pandas as pd\n",
+    "pd.get_option(\"display.max_columns\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +188,7 @@
        "4  Speed Skating Women's 500 metres   NaN  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +215,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,21 +226,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Name    100979\n",
-       "Sex     100979\n",
-       "Age      94941\n",
-       "Team    100979\n",
-       "NOC     100979\n",
+       "Name    33808\n",
+       "Sex     33808\n",
+       "Age     33525\n",
+       "Team    33808\n",
+       "NOC     33808\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,15 +250,15 @@
     "\n",
     "#Selecting the columns\n",
     "starter_olympics_df = df.loc[:, ['Name', 'Sex', 'Age', 'Team', 'NOC',\n",
-    "                                'Year', 'Sport', 'Event', 'Medal']]\n",
+    "                                'Year', 'Sport', 'Event', 'Medal', \"ID\"]]\n",
     "starter_olympics_df.head()\n",
     "\n",
     "#Select only USA participants\n",
     "usa_filter_f = starter_olympics_df[(starter_olympics_df[\"Sex\"] == \"F\")]\n",
-    "usa_filter.head()\n",
+    "usa_filter_f.head()\n",
     "\n",
     "#drop duplicates based off of the name\n",
-    "usa_clean = usa_filter.drop_duplicates(subset=['Name']).count()\n",
+    "usa_clean = usa_filter_f.drop_duplicates(subset=['Name']).count()\n",
     "usa_clean.head()\n",
     "\n",
     "#Checking for any Nan values on columns to be used\n",
@@ -253,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +281,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,8 +307,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": 91,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -320,6 +336,8 @@
        "      <th>Sex</th>\n",
        "      <th>Age</th>\n",
        "      <th>Sport</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>Name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -328,99 +346,173 @@
        "      <td>F</td>\n",
        "      <td>21.0</td>\n",
        "      <td>Speed Skating</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>Christine Jacoba Aaftink</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>F</td>\n",
        "      <td>25.0</td>\n",
        "      <td>Speed Skating</td>\n",
+       "      <td>1992</td>\n",
+       "      <td>Christine Jacoba Aaftink</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>F</td>\n",
        "      <td>27.0</td>\n",
        "      <td>Speed Skating</td>\n",
+       "      <td>1994</td>\n",
+       "      <td>Christine Jacoba Aaftink</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>F</td>\n",
        "      <td>18.0</td>\n",
        "      <td>Athletics</td>\n",
+       "      <td>1932</td>\n",
+       "      <td>Cornelia \"Cor\" Aalten (-Strannood)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>F</td>\n",
        "      <td>30.0</td>\n",
        "      <td>Sailing</td>\n",
+       "      <td>1996</td>\n",
+       "      <td>Minna Maarit Aalto</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>262863</th>\n",
+       "      <th>271080</th>\n",
        "      <td>F</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>Archery</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>263428</th>\n",
-       "      <td>F</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>Handball</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>265698</th>\n",
-       "      <td>F</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>Curling</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>266759</th>\n",
-       "      <td>F</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>Modern Pentathlon</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>270972</th>\n",
-       "      <td>F</td>\n",
-       "      <td>47.0</td>\n",
+       "      <td>33.0</td>\n",
        "      <td>Athletics</td>\n",
+       "      <td>1964</td>\n",
+       "      <td>Galina Ivanovna Zybina (-Fyodorova)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271099</th>\n",
+       "      <td>F</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>Wrestling</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>Stavroula Zygouri</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271102</th>\n",
+       "      <td>F</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>Olesya Nikolayevna Zykina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271103</th>\n",
+       "      <td>F</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Athletics</td>\n",
+       "      <td>2004</td>\n",
+       "      <td>Olesya Nikolayevna Zykina</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>271110</th>\n",
+       "      <td>F</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>Basketball</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>Olga Igorevna Zyuzkova</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1363 rows × 3 columns</p>\n",
+       "<p>48860 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Sex   Age              Sport\n",
-       "4        F  21.0      Speed Skating\n",
-       "6        F  25.0      Speed Skating\n",
-       "8        F  27.0      Speed Skating\n",
-       "26       F  18.0          Athletics\n",
-       "32       F  30.0            Sailing\n",
-       "...     ..   ...                ...\n",
-       "262863   F  58.0            Archery\n",
-       "263428   F  38.0           Handball\n",
-       "265698   F  18.0            Curling\n",
-       "266759   F  18.0  Modern Pentathlon\n",
-       "270972   F  47.0          Athletics\n",
+       "       Sex   Age          Sport  Year                                 Name\n",
+       "4        F  21.0  Speed Skating  1988             Christine Jacoba Aaftink\n",
+       "6        F  25.0  Speed Skating  1992             Christine Jacoba Aaftink\n",
+       "8        F  27.0  Speed Skating  1994             Christine Jacoba Aaftink\n",
+       "26       F  18.0      Athletics  1932   Cornelia \"Cor\" Aalten (-Strannood)\n",
+       "32       F  30.0        Sailing  1996                   Minna Maarit Aalto\n",
+       "...     ..   ...            ...   ...                                  ...\n",
+       "271080   F  33.0      Athletics  1964  Galina Ivanovna Zybina (-Fyodorova)\n",
+       "271099   F  36.0      Wrestling  2004                    Stavroula Zygouri\n",
+       "271102   F  19.0      Athletics  2000            Olesya Nikolayevna Zykina\n",
+       "271103   F  23.0      Athletics  2004            Olesya Nikolayevna Zykina\n",
+       "271110   F  33.0     Basketball  2016               Olga Igorevna Zyuzkova\n",
        "\n",
-       "[1363 rows x 3 columns]"
+       "[48860 rows x 5 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "player_data = usa_filter_f[[\"Sex\", \"Age\", \"Sport\"]]\n",
+    "player_data = usa_filter_f[[\"Sex\", \"Age\", \"Sport\", \"Year\", \"Name\"]]\n",
     "player_data= player_data.drop_duplicates()\n",
     "player_data"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001A30DD9AD30>"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Set theme\n",
+    "plt.style.use('seaborn')\n",
+    "\n",
+    "#Select specific sports to look at trend\n",
+    "selected_sports = player_data.loc[(player_data['Sport'] == 'Athletics') |\n",
+    "                                  (player_data['Sport'] == 'Gymnastics') |\n",
+    "                                  (player_data['Sport'] == 'Swimming'), :]\n",
+    "sports = selected_sports.groupby(['Sport'])\n",
+    "sports['Name'].value_counts\n",
+    "sports\n",
+    "\n",
+    "                              "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
