--- a/Alex_Work.ipynb
+++ b/Alex_Work.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Analysis\n",
+    "\n",
+    "(Note medal count includes the winter Olympics)\n",
+    "\n",
+    "What I had to do is breakdown, the winners based upon country and from there of course separate it by gender. After breaking it down from there we took the original data and only kept the year and the medals won. I did print the years to their own list but I ended not needing this step, when later I setup the new Data Frame to use the index of year. Before reaching that step, I did separate the three medals into their own lists and then use that list to create the Data Frame after renaming the columns. We then create the medal counts based upon year, and medal won. For some additional cleanup we set any \"NAN\" to hold a zero value in its place and of course created everything as an integer, since the numbers were so well rounded and then created our line graphs.\n",
+    "\n",
+    "We created some great visuals but what do they mean, well we can see with greater performance from the women in the United States that we start claiming more medals. Within some years, The United States Women's Team leads in performance for all three-medal count over the men. Showing that while there were still struggles, the success of the United States Women's Team led the world. Among two of the three countries added for comparison. We see Japan does not have much success until the later part of their women's suffrage, after World War II. China did not even come back to the Olympics until the 1984 Summer Games. Lastly, we compared it to Russia, who have been allowing women to compete for just about the same time as we have. They do have a pretty good track record of success compared to our Women's Team.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
